// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/PlanInfo renders and passes props correctly): activate link 1`] = `
Object {
  "children": "active",
  "style": Object {
    "color": "#22B509",
  },
  "to": "#",
}
`;

exports[`/components/PlanInfo renders and passes props correctly): avatar props 1`] = `
Object {
  "className": "plan-info-avatar",
  "icon": <ForwardRef(FileExcelFilled) />,
  "shape": "circle",
  "size": Object {
    "lg": 64,
    "md": 40,
    "sm": 32,
    "xl": 80,
    "xs": 24,
    "xxl": 100,
  },
  "style": Object {
    "height": 82,
    "lineHeight": 1.8,
    "width": 80,
  },
}
`;

exports[`/components/PlanInfo renders and passes props correctly): edit link 1`] = `
Object {
  "children": "Edit",
  "to": "#",
}
`;
